guest modal filelist/ edit file description list - edit detailview set fixed width - guest overflow css

--- a/develop_requirement_proj/static/css/drs.css
+++ b/develop_requirement_proj/static/css/drs.css
@@ -437,7 +437,7 @@
     #TL tbody td:last-child{
         background-color: #fff !important;
     }
-    .modal .table td:hover {
+    .modal .table tr:hover td {
         overflow:visible;
         text-overflow: unset;
         background-color: #f3f3f3;
@@ -445,6 +445,10 @@
         word-break: break-word;
         white-space: normal;
         font-weight: 500;
+    }
+    #ezinfoModal.modal .table td{
+        text-overflow: unset;
+        white-space: normal;
     }
     .modal .table td:first-child{
         border-top-left-radius: .8em;
